# APP-for-abu-robocon2017

ActionCtr/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
ActionCtr/app/src/androidTest/java/com/action/app/actionctr/: ExampleInstrumentedTest.java
ActionCtr/app/src/androidTest/java/com/action/app/actionctr2/: ExampleInstrumentedTest.java
ActionCtr/app/src/main/: AndroidManifest.xml
ActionCtr/app/src/main/cpp/: dataChange.cpp  native-lib.cpp
ActionCtr/app/src/main/java/com/action/app/actionctr/: BasicActivity.java  BeginActivity.java  BleConnectActivity.java  BleService.java  CtrActivity.java  DataActivity.java  DebugDataDisplayActivity.java  MenuRightFragment.java  ParamChangeActivity.java  ParamChangeActivity.java.rej  humanSensorActivity.java  myTool.java
ActionCtr/app/src/main/java/com/action/app/actionctr2/: BasicActivity.java  BeginActivity.java  BleConnectActivity.java  CtrActivity.java  DataActivity.java  DebugDataDisplayActivity.java  MenuRightFragment.java  ModeSelect.java  ParamChangeActivity.java  humanSensorActivity.java  myTool.java
ActionCtr/app/src/main/res/layout/: activity_begin.xml  activity_ble_connect.xml  activity_ctr.xml  activity_data.xml  activity_debug_data_display.xml  activity_human_sensor.xml  activity_param_change.xml  item_listview_activity_data.xml  item_listview_activity_debugdata.xml  layout_meu.xml  mode_select.xml
ActionCtr/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
ActionCtr/app/src/test/java/com/action/app/actionctr/: ExampleUnitTest.java
ActionCtr/mylibrary/: proguard-rules.pro
(+29 files in other folders)
